data/repos_history/third-place/platform/2024-04-07T16:16:00Z/gatekeeper/templates/ConstraintHPA.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHorizontalPodAutoscaler
metadata:
  name: horizontal-pod-autoscaler
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["autoscaling"]
        kinds: ["HorizontalPodAutoscaler"]
  parameters:
    minimumReplicaSpread: 1
    enforceScaleTargetRef: true
    ranges:
      - min_replicas: 2
        max_replicas: 6
